@@ -1,8 +1,8 @@
 Package: pould
 Title: Phased or Unphased Linkage Disequilibrium
-Version: 0.8.1.9000
+Version: 0.8.2.9000
 Authors@R: person("Steven", "mack", email = "sjmack@chori.org", role = c("aut", "cre"))
-Description: Computes the D', Wn, and conditional ALD measures pairs of genetic loci. Performs these LD calculations on phased HLA genotype data recorded using GL String format. Alternatively generates Expectation-Maximization estimated haplotypes from phased data, or performs LD calculations on EM estimated haplotypes. Perfoms sign tests comparing LD values for phased and unphased datasets, and generates heat-maps for each LD measure. Described by Osoegawa et al. 2018. https://doi.org/10.1016/j.humimm.2019.01.010.
+Description: Computes the D', Wn, and conditional ALD measures pairs of genetic loci. Performs these LD calculations on phased HLA genotype data recorded using GL String format. Alternatively generates Expectation-Maximization estimated haplotypes from phased data, or performs LD calculations on EM estimated haplotypes. Perfoms sign tests comparing LD values for phased and unphased datasets, and generates heat-maps for each LD measure. Described by Osoegawa et al. 2019. https://doi.org/10.1016/j.humimm.2019.01.010.
 Depends: R (>= 3.5.0)
 License: GPL (>= 3)
 Encoding: UTF-8
