@@ -1,4 +1,4 @@
-## LD.heat.map -- Steven J. Mack February 20-27, 2019 v0.2
+## LD.heat.map -- Steven J. Mack June 21, 2019 v0.3
 ## Displays a heatmap of the matrix for phased and unphased LD values returned by LDWrap()
 
 #' Generates heat-maps for four linkage disequilibrium (LD) values (\eqn{D'}, \eqn{Wn}, \eqn{WLoc1/Loc2} and \eqn{WLoc2/Loc1}) generated for all pairs of phased and unphased two-locus haplotypes by LDWrap().
@@ -7,6 +7,8 @@
 #' 
 #' @param dataName The "base" name of the _LD_result.csv files generated by LDWrap() without the "_Phased_LD_results.csv" or "_Unphased_LD_results.csv" suffixes. See Examples, below. If both corresponding "<dataName>_Phased_LD_results.csv" and "<dataName>_Unphased_LD_results.csv" files are not found, the funciton will halt with a notification. However, if onl one of those files is found in the working director, half-matrix heat map plots will be generated.
 #' @param color A logical parameter that indentifies if the heat-maps should be plotted in color (TRUE) or greyscale (FALSE). The default option is TRUE. 
+#' @param phasedLabel The label that should appear on the heat-map plots for the upper, phased half of the plot. The default option is 'Phased'.
+#' @param unphasedLabel The label that should appear on the heat-map plots for the lower, unphased half of the plot. The default option is 'EM-estimated'.
 #' @keywords heat map linkage disequilibrium
 #' @importFrom utils read.csv
 #' @importFrom ggplot2 ggsave ggplot geom_tile geom_text scale_fill_gradient2 theme_minimal theme guides xlab ggtitle coord_fixed aes element_text element_blank guide_colorbar
@@ -18,9 +20,9 @@
 #' # which are saved as "hla-family-data_Phased_LD_results.csv" and 
 #' # "hla-family-data_Unphased_LD_results.csv", respectively. 
 #' LD.heat.map("hla-family-data")
-#' @references Kazutoyo et al. Hum Immunol. 2019 TBA
+#' @references Kazutoyo et al. Hum Immunol. 2019 https://doi.org/10.1016/j.humimm.2019.01.010
 
-LD.heat.map <- function(dataName,color=TRUE) {
+LD.heat.map <- function(dataName,color=TRUE,phasedLabel="Phased",unphasedLabel="EM-estimated") {
 
 Var1 <- Var2 <- value <- NULL
 ## Importing LDWrap() output data and processing to populate matrices
@@ -93,8 +95,8 @@ for(i in 1:4) {
           plot.title=element_text(size=12,hjust=0.5),axis.title=element_text(size=12)) +
     guides(fill=guide_colorbar(barwidth=1,barheight = 7,
           title.position = "top",title.hjust = 0.5)) +
-    xlab(label="Unphased") + 
-    ggtitle("Phased") +
+    xlab(label=unphasedLabel) + 
+    ggtitle(phasedLabel) +
     coord_fixed() 
   
   
