@@ -15,7 +15,7 @@ knitr::opts_chunk$set(
 ```
 
 # pould 
-v0.8.1.9000 (September 28, 2019)
+v0.8.2.9000 (June 21, 2019)
 
 The *pould* package calculates four linkage disequilibrium (LD) statistics -- *D<sup>'</sup>*, *W<sub>n</sub>* and the two conditional asymmetric LD (cALD) measures, *W<sub>A/B</sub>* and *W<sub>B/A</sub>* -- for genotype data from pairs of genetic loci, and can treat these data as either phased or unphased for these calculations. In addition, *pould* includes a wrapper function (*LDWrap()*) that parses multi-locus haplotypes reported in the 17th International HLA and Immunogenetics Workshop (IHIW) Family Haplotype Project's HaplObserve output format, as well as *LD.sign.test()*, a function that applies a sign test to LD values for phased and unphased haplotypes generated by *LDWrap()* for a given dataset, and *LD.heat.map()*, a function that generates PNG-formatted heat-map plots for each LD measure. For more information about cALD, see: Thomson G, Single RM. **Conditional asymmetric linkage disequilibrium (ALD): extending the biallelic r2 measure.** [Genetics. 2014;198(1):321-31](https://doi.org/10.1534/genetics.114.165266).
 
