@@ -2,7 +2,7 @@
 pould
 =====
 
-v0.8.1.9000 (September 28, 2019)
+v0.8.2.9000 (June 21, 2019)
 
 The *pould* package calculates four linkage disequilibrium (LD) statistics -- *D<sup>'</sup>*, *W<sub>n</sub>* and the two conditional asymmetric LD (cALD) measures, *W<sub>A/B</sub>* and *W<sub>B/A</sub>* -- for genotype data from pairs of genetic loci, and can treat these data as either phased or unphased for these calculations. In addition, *pould* includes a wrapper function (*LDWrap()*) that parses multi-locus haplotypes reported in the 17th International HLA and Immunogenetics Workshop (IHIW) Family Haplotype Project's HaplObserve output format, as well as *LD.sign.test()*, a function that applies a sign test to LD values for phased and unphased haplotypes generated by *LDWrap()* for a given dataset, and *LD.heat.map()*, a function that generates PNG-formatted heat-map plots for each LD measure. For more information about cALD, see: Thomson G, Single RM. **Conditional asymmetric linkage disequilibrium (ALD): extending the biallelic r2 measure.** [Genetics. 2014;198(1):321-31](https://doi.org/10.1534/genetics.114.165266).
 
@@ -23,10 +23,10 @@ library("pould")
 data(drb1.dqb1.demo)
 cALD(drb1.dqb1.demo,inPhase=FALSE)
 #> Calculating D', Wn and conditional ALD for 53 unphased genotypes at the DRB1 and DQB1 loci.
-#> D' for DRB1~DQB1 haplotypes: 0.958927661187799 (0.9589) 
-#> Wn for DRB1~DQB1 haplotypes: 0.811250965375916 (0.8113) 
-#> Variation of DQB1 conditioned on DRB1 (WDQB1/DRB1) = 0.904035598207342 (0.904)
-#> Variation of DRB1 conditioned on DQB1 (WDRB1/DQB1) = 0.778712699381306 (0.7787)
+#> D' for DRB1~DQB1 haplotypes: 0.958463656600392 (0.9585) 
+#> Wn for DRB1~DQB1 haplotypes: 0.811184755020453 (0.8112) 
+#> Variation of DQB1 conditioned on DRB1 (WDQB1/DRB1) = 0.903300945458266 (0.9033)
+#> Variation of DRB1 conditioned on DQB1 (WDRB1/DQB1) = 0.778712696382408 (0.7787)
 
 cALD(drb1.dqb1.demo,inPhase=TRUE)
 #> Calculating D', Wn and conditional ALD for 106 phased genotypes at the DRB1 and DQB1 loci.
