@@ -4,12 +4,17 @@
 \alias{LD.heat.map}
 \title{Generates heat-maps for four linkage disequilibrium (LD) values (\eqn{D'}, \eqn{Wn}, \eqn{WLoc1/Loc2} and \eqn{WLoc2/Loc1}) generated for all pairs of phased and unphased two-locus haplotypes by LDWrap().}
 \usage{
-LD.heat.map(dataName, color = TRUE)
+LD.heat.map(dataName, color = TRUE, phasedLabel = "Phased",
+  unphasedLabel = "EM-estimated")
 }
 \arguments{
 \item{dataName}{The "base" name of the _LD_result.csv files generated by LDWrap() without the "_Phased_LD_results.csv" or "_Unphased_LD_results.csv" suffixes. See Examples, below. If both corresponding "<dataName>_Phased_LD_results.csv" and "<dataName>_Unphased_LD_results.csv" files are not found, the funciton will halt with a notification. However, if onl one of those files is found in the working director, half-matrix heat map plots will be generated.}
 
 \item{color}{A logical parameter that indentifies if the heat-maps should be plotted in color (TRUE) or greyscale (FALSE). The default option is TRUE.}
+
+\item{phasedLabel}{The label that should appear on the heat-map plots for the upper, phased half of the plot. The default option is 'Phased'.}
+
+\item{unphasedLabel}{The label that should appear on the heat-map plots for the lower, unphased half of the plot. The default option is 'EM-estimated'.}
 }
 \description{
 This function accepts *_LD_results.csv files generated by LDWrap() as input, and writes a PNG-formatted heat-map plot file to the working directory for each LD measure.
@@ -21,7 +26,7 @@ This function accepts *_LD_results.csv files generated by LDWrap() as input, and
 LD.heat.map("hla-family-data")
 }
 \references{
-Kazutoyo et al. Hum Immunol. 2019 TBA
+Kazutoyo et al. Hum Immunol. 2019 https://doi.org/10.1016/j.humimm.2019.01.010
 }
 \keyword{disequilibrium}
 \keyword{heat}
