@@ -1,7 +1,7 @@
 ---
 title: "POULD: Phased Or Unphased Linkage Disequilibrium"
 author: "Steven J. Mack, PhD -- sjmack@chori.org"
-date: "February 27, 2019"
+date: "June 21, 2019"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Using POULD}
@@ -11,7 +11,7 @@ vignette: >
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-* Package Version: 0.8.1.9000
+* Package Version: 0.8.2.9000
 
 # Overview
 
@@ -19,7 +19,8 @@ The *pould* package (pronounced "pooled") calculates four linkage disequilibrium
 
 The package includes a wrapper function that parses multi-locus haplotypes in the [17th International HLA and Immunogenetics Workshop](http://ihiws.org) (IHIW) Family Haplotype Project's HaplObserve output format. This wrapper function generates output files in the R working directory.
 
-The package also includes a function that applies a sign test to LD values for phased and unphased haplotypes generated by the wrapper function for an IHIW Family Haplotype Project-formatted dataset, as well as a function that generates heat-maps for each LD measure. 
+The package also includes a function that applies a sign test to LD values for phased and unphased haplotypes generated by the wrapper function for an IHIW Family Haplotype Project-formatted dataset, as well as a function that generates heat-maps for each LD measure. For more information, see:<br>
+Osoegawa et. al. [Hum Immunol. In Press, 2019](https://doi.org/10.1016/j.humimm.2019.01.010).
 
 For information about these LD measures, see:<br>
 Hedrick PW. [Genetics; 1987,117,331-41](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1203208/pdf/331.pdf).<br>
@@ -318,6 +319,21 @@ Class: Logical. Required. Default=TRUE.
 
 Identifies if the heat-map plots should be generated in color (color=TRUE) or greyscale (color=FALSE). The default is color=TRUE. Color heat-map plots will range from blue (low LD values) to white (LD values of 0.5) to red (high LD values). Greyscale heat-map plots will range from dark grey (Low LD values) to light grey (high LD values).
 
+**phasedLabel**
+
+Class: String. Required. Default="Phased".
+
+e.g., `phasedLabel="Pedigree Phased"`
+
+Specifies the label that should appear on the heat-map plots for the upper, phased half of the plot.
+
+**unphasedLabel**
+
+Class: String. Required. Default="EM-estimated".
+
+e.g., `phasedLabel="EM Haplotypes"`
+
+Specifies the label that should appear on the heat-map plots for the lower, unphased half of the plot.
 
 ## Examples
 ###cALD()
