@@ -1,4 +1,12 @@
 +------------------------------------------------------------------------------+
+pould v0.8.2.9000 date: 6-21-2019
+  -Added the phasedLabel and unphasedLabel to LD.heat.map(), allowing users
+   to specify the labels associated with the upper and lower half of each plot.
+  -Modified the LDWrap() Vignette and function documentation to reflect these 
+   changes, and to cite a publication describing this package.
+  -Happy Summer Solstice!
+  
++------------------------------------------------------------------------------+
 pould v0.8.1.9000 date: 2-28-2019
   -Added the color parameter to LD.heat.map(), allowing color or grey-scale 
    heat-map plots to be generated.
